kubernetes/webapp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: webapp-deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: webapp-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webapp-deployment
    spec:
      containers:
      - image: charmainetrx/assessment:1.0.0
        imagePullPolicy: IfNotPresent
        name: webapp-deployment
        ports:
        - containerPort: 80
