kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  labels:
    app: webapp-ingress
spec:
  ingressClassName: alb
  rules:
    - host: webapp.assessment.com
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: webapp-service
                port:
                  number: 8080
